# api-admin-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/application/commands/: assign_plan.py  create_accountant.py  create_system_plan.py  forgot_password.py  manage_accountant_plan.py  manage_client.py  reset_password.py  sign_up.py  update_white_label.py
src/application/queries/: get_accountant_dashboard.py  get_public_brand_config.py  list_accountant_plans.py  list_clients.py  login.py
src/domain/: value_objects.py
src/domain/entities/: accountant.py  accountant_plan.py  client.py  subscription.py  system_plan.py  user.py
src/infrastructure/database/: config.py  models.py
src/infrastructure/security/: password_recovery.py  tokens.py
src/presentation/api/: dependencies.py  main.py
src/presentation/api/v1/: router.py
src/presentation/api/v1/endpoints/: accountants.py  auth.py  clients.py  plans.py
tests/: test_main.py  test_security.py
tests/application/: test_accountant_plan.py  test_assign_plan.py  test_create_accountant.py  test_create_system_plan.py  test_get_accountant_dashboard.py  test_get_public_brand_config.py  test_login.py  test_manage_client.py  test_password_recovery.py  test_sign_up.py  test_update_white_label.py
tests/presentation/: test_accountant_endpoints.py  test_auth_endpoints.py  test_client_endpoints.py  test_plan_endpoints.py
