[project]
name = "api-admin-dashboard"
version = "0.1.0"
description = "Multi-tenant API for Accountant Admin Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]",
    "sqlmodel",
    "psycopg2-binary",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
